fix scaling issue where content scale too big when screen size is big

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 body{
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #e5e7eb; 
     padding: 0;
     margin: 0;
 }
-.header, .footer, .item_one, .item_two, .item_three, .item_four{
-    padding: 0 200px;
+
+.background_one{
+    background-color: #1F2937;
+}
+.background_two{
+    background-color: #e5e7eb;
 }
 
 .header{
@@ -16,6 +19,8 @@ body{
     align-items: center;
     background-color: #1F2937;
     height: 72px;
+    max-width: 1080px;
+    margin: 0 auto;
 }
 
 .header_logo h4{
@@ -37,11 +42,6 @@ ul{
     color: #e5e7eb; 
 }
 
-.container{
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
 
 .item_one{
     flex: 1;
@@ -49,15 +49,16 @@ ul{
     flex-direction: row;
     justify-content: space-between;
     gap: 48px;
-    padding: 70px 200px;
-    margin: 0;
     background-color: #1F2937;
+    max-width: 1080px;
+    padding: 64px 0;
+    margin: 0 auto;
 }
 
 .contentOne{
     flex: 1;
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;   
 }
 .contentTwo{
     flex: 1;
@@ -93,7 +94,6 @@ ul{
 
 .item_two{
     flex: 1;
-    padding: 30px 200px;
     margin: 0;
     
 }
@@ -139,12 +139,12 @@ ul{
 
 .item_three{
     flex: 1;
-    padding: 30px 200px;
-    margin: 0;
+    max-width: 1080px;
     background-color: #e5e7eb;
-    padding: 100px 200px;
     display: flex;
     flex-direction: column;
+    padding: 64px 0;
+    margin: 0 auto;
 }
 
 .item_three h4{
@@ -153,7 +153,7 @@ ul{
     font-style: italic;
     font-weight: 100;
     text-align: center;
-    margin: 0;
+    margin: 5;
     padding: 0;
 }
 
@@ -168,8 +168,9 @@ ul{
 
 .item_four{
     flex: 1;
-    padding: 64px 200px;
-    margin: 0;
+    padding: 64px 0;
+    max-width: 1080px;
+    margin: 0 auto;
 }
 
 .contentFive{
